[package]
name = "block-query"
version = "0.1.0"
authors = ["Vaibhav Agnihotri <vaibhavagnihotri@outlook.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.17.0"
tokio = "1.15.0"
actix-web = "4.0.0-beta.10"
failure = "0.1.8"
serde = "1.0.99"
mime = "0.3.16"
serde_json = "1.0.74"
futures = "0.3.19"
chrono = { version = "0.4.19", features = ["serde"] }